[package]
name = "keypad-config"
version = "0.1.0"
authors = ["James Dryden <jdryden572@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "3.3.0"
itertools = "0.9.0"
enum_primitive = "0.1.1"
num-traits = "0.2.14"
thiserror = "1.0"