[package]
name = "keypad-config"
version = "0.1.0"
authors = ["James Dryden <jdryden572@gmail.com>"]
edition = "2018"

[lib]
name = "keypad"
path = "src/lib.rs"

[[bin]]
name = "keypad-test"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_primitive = "0.1.1"
itertools = "0.9.0"
log = "0.4"
num-traits = "0.2.14"
pretty_env_logger = "0.3"
serialport = "3.3.0"
thiserror = "1.0"