[package]
name = "keypad-tray"
version = "0.1.0"
authors = ["James Dryden <jdryden572@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_dirs = "1.2.1"
keypad-serial = { path = "../keypad-serial" }
native-windows-derive = "1.0.3"
native-windows-gui = { version = "1.0.8", features = [
    "image-decoder",
    "listbox", 
    "frame", 
    "tray-notification", 
    "message-window", 
    "menu", 
    "cursor"
] }
serde = { version = "1.0.121", features = ["derive"] }
serde_json = "1.0.61"
sysinfo = "0.15.9"
thiserror = "1.0.23"
